# ewoc_s1

./: .coveragerc  36MUB.json  AUTHORS.rst  LICENSE.txt  README.rst  mypy.ini  setup.cfg  setup.py
.github/workflows/: ci-cd.yml  python.yml
docs/: conf.py  dpm.rst  index.rst
src/ewoc_s1/: __init__.py  cli.py  ewoc_s1_ard.py  generate_s1_ard.py  generate_s1_ard_pid.py  generate_s1_ard_wp.py  s1_prd_id.py  skeleton.py  utils.py
tests/: conftest.py  test_cli.py  test_s1_prd_id.py  test_skeleton.py
